--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body{
     --searchIconColor: invert(52%) sepia(36%) saturate(386%) hue-rotate(157deg) brightness(99%) contrast(87%);
     /* --miniIconColor: #6686b6; */
     --miniIconColor: invert(52%) sepia(43%) saturate(402%) hue-rotate(176deg) brightness(91%) contrast(89%);
-    --weatherIconColor: invert(96%) sepia(7%) saturate(387%) hue-rotate(347deg) brightness(109%) contrast(89%);
+    --weatherIconColor: #f0f2ef;
 }
 
 
@@ -99,9 +99,6 @@ body{
   filter: var(--searchIconColor);
 }
 
-.searchImg{
-  filter: var(--svgColor);
-}
 
 .weatherInfo{
   display: flex;
@@ -134,10 +131,10 @@ body{
 }
 
 .weatherIcon{
-  width: 150px;
-  height: 150px;
-  filter: var(--weatherIconColor);
+  font-size: 200px;
+  fill: var(--weatherIconColor);
   margin: 10px 0; 
+  display:flex;
 }
 
 
